// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Versioning should get lowest target versions 1`] = `
[
  {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 24,
    "target": "samsung",
    "version": "24",
  },
  {
    "parsedVersion": 17.5,
    "target": "safari",
    "version": "17.5",
  },
  {
    "parsedVersion": 111,
    "target": "opera",
    "version": "111",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 17.5,
    "target": "ios_saf",
    "version": "17.5",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 115,
    "target": "firefox",
    "version": "115",
  },
  {
    "parsedVersion": 128,
    "target": "edge",
    "version": "128",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.52,
    "target": "baidu",
    "version": "13.52",
  },
  {
    "parsedVersion": 131,
    "target": "android",
    "version": "131",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 132,
    "target": "and_ff",
    "version": "132",
  },
  {
    "parsedVersion": 131,
    "target": "and_chr",
    "version": "131",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
[
  {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
[
  {
    "parsedVersion": 26,
    "target": "samsung",
    "version": "26",
  },
  {
    "parsedVersion": 17.6,
    "target": "safari",
    "version": "17.6",
  },
  {
    "parsedVersion": 113,
    "target": "opera",
    "version": "113",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 15.6,
    "target": "ios_saf",
    "version": "15.6-15.8",
  },
  {
    "parsedVersion": 115,
    "target": "firefox",
    "version": "115",
  },
  {
    "parsedVersion": 130,
    "target": "edge",
    "version": "130",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 131,
    "target": "android",
    "version": "131",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 132,
    "target": "and_ff",
    "version": "132",
  },
  {
    "parsedVersion": 131,
    "target": "and_chr",
    "version": "131",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 24,
    "target": "samsung",
    "version": "24",
  },
  {
    "parsedVersion": 17.5,
    "target": "safari",
    "version": "17.5",
  },
  {
    "parsedVersion": 111,
    "target": "opera",
    "version": "111",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 17.5,
    "target": "ios_saf",
    "version": "17.5",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 115,
    "target": "firefox",
    "version": "115",
  },
  {
    "parsedVersion": 128,
    "target": "edge",
    "version": "128",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.52,
    "target": "baidu",
    "version": "13.52",
  },
  {
    "parsedVersion": 131,
    "target": "android",
    "version": "131",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 132,
    "target": "and_ff",
    "version": "132",
  },
  {
    "parsedVersion": 131,
    "target": "and_chr",
    "version": "131",
  },
]
`;

exports[`Versioning should support string config in rule option 1`] = `
[
  {
    "parsedVersion": 26,
    "target": "samsung",
    "version": "26",
  },
  {
    "parsedVersion": 17.6,
    "target": "safari",
    "version": "17.6",
  },
  {
    "parsedVersion": 113,
    "target": "opera",
    "version": "113",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 15.6,
    "target": "ios_saf",
    "version": "15.6-15.8",
  },
  {
    "parsedVersion": 115,
    "target": "firefox",
    "version": "115",
  },
  {
    "parsedVersion": 130,
    "target": "edge",
    "version": "130",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 131,
    "target": "android",
    "version": "131",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 132,
    "target": "and_ff",
    "version": "132",
  },
  {
    "parsedVersion": 131,
    "target": "and_chr",
    "version": "131",
  },
]
`;
